section-eleven/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: grade-submission
spec:
  serviceName: mongodb
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: mongodb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grade-submission
        app.kubernetes.io/component: database
        app.kubernetes.io/instance: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:4.4
          resources:
            requests:
              memory: "128Mi"
              cpu: "128m"
            limits:
              memory: "128Mi"
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-persistent-storage
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongodb-persistent-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
